--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "prettier": "^1.9.2",
     "prop-types": "^15.5.7",
     "react": "^16.3.2",
+    "react-click-outside": "^3.0.1",
     "react-dom": "^16.3.2",
     "react-flip-motion": "^1.3.4",
     "react-router-dom": "^4.2.2",
